# food-diary-rag

./: .env.example  .gitignore  pyproject.toml  readme.md
config/: settings.py
data/processed/: parsed_records.json  records_with_embeddings.json
data/raw/: 2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md
scripts/: generate_embeddings.py  ingest_notes.py  load_to_qdrant.py
src/calculations/: nutrition.py
src/embeddings/: embedder.py
src/ingestion/: file_loader.py  note_parser.py  validator.py
src/models/: query.py
src/query_processing/: date_resolver.py  query_classifier.py  router.py
src/response_generation/: numeric_formatter.py  semantic_formatter.py
src/retrieval/: semantic_search.py
src/services/: embedding_service.py  full_ingest_service.py  ingest_service.py  numeric_query_service.py  qdrant_ingest_service.py  query_service.py
src/storage/: qdrant_store.py
