[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-diary-rag"
version = "0.1.0"
description = "RAG-based system for querying nutrition notes with semantic search and structured calculations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Leo" }
]
dependencies = [
  "openai==2.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
